--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-json-view-lite": "^1.4.0"
+    "react-json-view-lite": "^1.4.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
