--- a/.env
+++ b/.env
@@ -1,9 +1,5 @@
-# The client_id of the OAuth client registered in FbWeb
-FBWEB_OAUTH_CLIENT_ID=
-# The client_secret of the OAuth client registered in FbWeb
-FBWEB_OAUTH_CLIENT_SECRET=
-# The scope of the OAuth client registered in FbWeb (not used in fact)
-FBWEB_OAUTH_CLIENT_SCOPE="read-activity read-data write-data"
+# The public server base URL (not ending with "/")
+# PUBLIC_SERVER_URL=https://fbweb-oauth-demo.fileflex.com
 
-# The FbWeb server base URL
-FBWEB_SERVER_URL=https://mspdev.cnexus.com
+# for local development
+# NODE_TLS_REJECT_UNAUTHORIZED=0
