--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # PUBLIC_SERVER_URL=https://fbweb-oauth-demo.fileflex.com
 
 # for local development
-# NODE_TLS_REJECT_UNAUTHORIZED=0
+NODE_TLS_REJECT_UNAUTHORIZED=0
